AM_CFLAGS = -g -O2 -W -Wall
ACLOCAL_AMFLAGS = -I m4

lib_LTLIBRARIES = libpivumeter.la

libpivumeter_la_SOURCES = src/pivumeter.c src/devices/scroll-phat.c src/devices/scroll-phat-hd.c src/devices/blinkt.c src/devices/speaker-phat.c src/devices/phat-beat.c src/devices/bargraph.c src/devices/bargraph-stereo.c src/devices/gpio-bargraph-stereo.c src/devices/gpio-10-bargraph.c
